for para predicados

--- a/fact.template
+++ b/fact.template
@@ -1,2 +1,5 @@
 # Template for facts
-{{dominio.predicates[0].variable.state}}({%for fact in dominio.predicates[0].facts %} 	{{fact.state}},{% endfor %} {{dominio.predicates[0].finalFact.state}}).
+{% for predicate in dominio.predicates %}
+{{predicate.variable.state}}({%for fact in predicate.facts %}{{fact.state}},{% endfor %} {{predicate.finalFact.state}}).
+{% endfor %}
+
